--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.SoundPaletteUI"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.MainActivity"
+            android:name=".Main.Activities.apiTest.MainActivity"
             android:exported="true"
 
             android:label="@string/title_activity_main"
