--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -13,9 +14,11 @@
         android:theme="@style/Theme.SoundPaletteUI"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.MainActivity"
+            android:name=".Activities.Home.HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.LoginRegister.LoginActivity"
             android:exported="true"
-
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.SoundPaletteUI">
             <intent-filter>
@@ -23,8 +26,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
     </application>
 
 </manifest>
