--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+    xmlns:tools="http://schemas.android.com/tools" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,23 +13,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SoundPaletteUI"
-        tools:targetApi="31">
-        <activity
-            android:name=".Activities.Home.HomeActivity"
-            android:exported="false" />
+        tools:targetApi="31" >
+
         <activity
             android:name=".Activities.Profile.Register"
             android:exported="false" />
+
+        <activity
+            android:name=".Activities.MainScreenActivity"
+            android:exported="false" />
+
         <activity
             android:name=".Activities.LoginRegister.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.SoundPaletteUI">
+            android:theme="@style/Theme.SoundPaletteUI" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
     </application>
