--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/filepaths"/>
         </provider>
-        <activity
-            android:name=".Activities.Home.HomeActivity"
-            android:exported="false" />
+        <activity android:name=".Activities.Profile.Register"
+            android:exported="false"/>
         <activity
             android:name=".Activities.MainScreenActivity"
             android:exported="false" />
