Modified the MediaPlayer so it's a global utility instead of implementing a MediaPlayer for every PostAdapter if it were POST_TYPE=2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".Activities.Interactions.CommentBottomSheet" />
         <activity
             android:name=".Activities.MainScreenActivity"
+            android:hardwareAccelerated="false"
             android:exported="false" />
         <activity
             android:name=".Activities.LoginRegister.LoginActivity"
